Fixed the cut off background behind fencing panels

--- a/sass/components/_tabs.scss
+++ b/sass/components/_tabs.scss
@@ -244,12 +244,26 @@
   background: #555;
 }	
 
-.fencing-tabs-container.enable-scroll .fencing-tab-container.grabbing:before,
-.fc-section-details .fencing-display-result.grabbing:before {
+.fencing-tabs-container.enable-scroll .fencing-tab-container.grabbing:before{
 	content: "";
 	background: #f6792508;
 	position: absolute;
 	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 9999;
+	width: 100%;
+}
+.fc-section-details .fencing-display-result.grabbing .fencing-panel-container{
+    position: relative;
+}
+.fc-section-details .fencing-display-result.grabbing .fencing-panel-container:before {
+	content: "";
+	background: #f6792508;
+	position: absolute;
+	top: -22px;
+    height: 224px;
 	right: 0;
 	bottom: 0;
 	left: 0;
