--- a/style.css
+++ b/style.css
@@ -2447,12 +2447,28 @@ thead.fc-border th:last-child {
   background: #555;
 }
 
-.fencing-tabs-container.enable-scroll .fencing-tab-container.grabbing:before,
-.fc-section-details .fencing-display-result.grabbing:before {
+.fencing-tabs-container.enable-scroll .fencing-tab-container.grabbing:before {
   content: "";
   background: rgba(246, 121, 37, 0.031372549);
   position: absolute;
   top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+}
+
+.fc-section-details .fencing-display-result.grabbing .fencing-panel-container {
+  position: relative;
+}
+
+.fc-section-details .fencing-display-result.grabbing .fencing-panel-container:before {
+  content: "";
+  background: rgba(246, 121, 37, 0.031372549);
+  position: absolute;
+  top: -22px;
+  height: 224px;
   right: 0;
   bottom: 0;
   left: 0;
